// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchEnricher add patch enrichment includes contentMediaType in add patch metadata 1`] = `
{
  "fieldName": "avatar",
  "patch": {
    "op": "add",
    "path": "/properties/avatar",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "contentMediaType",
      "to": "text/plain",
    },
  ],
}
`;

exports[`PatchEnricher add patch enrichment includes deprecated in add patch metadata 1`] = `
{
  "fieldName": "field",
  "patch": {
    "op": "add",
    "path": "/properties/field",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "deprecated",
      "to": true,
    },
  ],
}
`;

exports[`PatchEnricher add patch enrichment includes description in add patch metadata 1`] = `
{
  "fieldName": "field",
  "patch": {
    "op": "add",
    "path": "/properties/field",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "description",
      "to": "My description",
    },
  ],
}
`;

exports[`PatchEnricher add patch enrichment includes foreignKey in add patch metadata 1`] = `
{
  "fieldName": "categoryId",
  "patch": {
    "op": "add",
    "path": "/properties/categoryId",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "foreignKey",
      "to": "categories",
    },
  ],
}
`;

exports[`PatchEnricher add patch enrichment includes formula in add patch metadata 1`] = `
{
  "fieldName": "computed",
  "patch": {
    "op": "add",
    "path": "/properties/computed",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "formula",
      "to": "value * 2",
    },
  ],
}
`;

exports[`PatchEnricher add patch enrichment includes non-standard default value in add patch metadata 1`] = `
{
  "fieldName": "field",
  "patch": {
    "op": "add",
    "path": "/properties/field",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "default",
      "to": "my default",
    },
  ],
}
`;

exports[`PatchEnricher add patch enrichment includes ref in add patch metadata 1`] = `
{
  "fieldName": "avatar",
  "patch": {
    "op": "add",
    "path": "/properties/avatar",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "ref",
      "to": "File",
    },
  ],
}
`;

exports[`PatchEnricher add patch enrichment skips standard default values in add patch metadata 1`] = `
{
  "fieldName": "field",
  "patch": {
    "op": "add",
    "path": "/properties/field",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "default",
      "to": "",
    },
  ],
}
`;

exports[`PatchEnricher fieldName extraction extracts array items field name 1`] = `
{
  "fieldName": "items[*].name",
  "patch": {
    "op": "replace",
    "path": "/properties/items/items/properties/name",
  },
  "propertyChanges": [],
  "typeChange": undefined,
}
`;

exports[`PatchEnricher fieldName extraction extracts nested field name 1`] = `
{
  "fieldName": "nested.field",
  "patch": {
    "op": "replace",
    "path": "/properties/nested/properties/field",
  },
  "propertyChanges": [],
  "typeChange": undefined,
}
`;

exports[`PatchEnricher fieldName extraction extracts simple field name 1`] = `
{
  "fieldName": "name",
  "patch": {
    "op": "replace",
    "path": "/properties/name",
  },
  "propertyChanges": [],
  "typeChange": undefined,
}
`;

exports[`PatchEnricher move patch enrichment detects movesIntoArray when moving from root to array items 1`] = `
{
  "fieldName": "items[*].field",
  "isRename": undefined,
  "movesIntoArray": true,
  "patch": {
    "from": "/properties/field",
    "op": "move",
    "path": "/properties/items/items/properties/field",
  },
  "propertyChanges": [],
}
`;

exports[`PatchEnricher move patch enrichment detects movesIntoArray when moving into deeper array nesting 1`] = `
{
  "fieldName": "items[*].nested[*].field",
  "isRename": undefined,
  "movesIntoArray": true,
  "patch": {
    "from": "/properties/outer/items/properties/field",
    "op": "move",
    "path": "/properties/items/items/properties/nested/items/properties/field",
  },
  "propertyChanges": [],
}
`;

exports[`PatchEnricher move patch enrichment detects rename (same parent) 1`] = `
{
  "fieldName": "newName",
  "isRename": true,
  "movesIntoArray": undefined,
  "patch": {
    "from": "/properties/oldName",
    "op": "move",
    "path": "/properties/newName",
  },
  "propertyChanges": [],
}
`;

exports[`PatchEnricher move patch enrichment does not set movesIntoArray when moving out of array 1`] = `
{
  "fieldName": "field",
  "isRename": undefined,
  "movesIntoArray": undefined,
  "patch": {
    "from": "/properties/items/items/properties/field",
    "op": "move",
    "path": "/properties/field",
  },
  "propertyChanges": [],
}
`;

exports[`PatchEnricher move patch enrichment does not set movesIntoArray when moving within same level 1`] = `
{
  "fieldName": "other.field",
  "isRename": undefined,
  "movesIntoArray": undefined,
  "patch": {
    "from": "/properties/nested/properties/field",
    "op": "move",
    "path": "/properties/other/properties/field",
  },
  "propertyChanges": [],
}
`;

exports[`PatchEnricher remove patch enrichment returns patch with fieldName only 1`] = `
{
  "fieldName": "field",
  "patch": {
    "op": "remove",
    "path": "/properties/field",
  },
  "propertyChanges": [],
}
`;

exports[`PatchEnricher replace patch enrichment detects contentMediaType addition 1`] = `
{
  "fieldName": "image",
  "patch": {
    "op": "replace",
    "path": "/properties/image",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "contentMediaType",
      "to": "text/plain",
    },
  ],
  "typeChange": undefined,
}
`;

exports[`PatchEnricher replace patch enrichment detects contentMediaType change 1`] = `
{
  "fieldName": "image",
  "patch": {
    "op": "replace",
    "path": "/properties/image",
  },
  "propertyChanges": [
    {
      "from": "text/plain",
      "property": "contentMediaType",
      "to": "text/markdown",
    },
  ],
  "typeChange": undefined,
}
`;

exports[`PatchEnricher replace patch enrichment detects contentMediaType removal 1`] = `
{
  "fieldName": "image",
  "patch": {
    "op": "replace",
    "path": "/properties/image",
  },
  "propertyChanges": [
    {
      "from": "text/plain",
      "property": "contentMediaType",
      "to": undefined,
    },
  ],
  "typeChange": undefined,
}
`;

exports[`PatchEnricher root node patches enriches primitive root default change 1`] = `
{
  "fieldName": "",
  "patch": {
    "op": "replace",
    "path": "",
  },
  "propertyChanges": [
    {
      "from": "old",
      "property": "default",
      "to": "new",
    },
  ],
  "typeChange": undefined,
}
`;

exports[`PatchEnricher root node patches enriches root description change 1`] = `
{
  "fieldName": "",
  "patch": {
    "op": "replace",
    "path": "",
  },
  "propertyChanges": [
    {
      "from": undefined,
      "property": "description",
      "to": "Root description",
    },
  ],
  "typeChange": undefined,
}
`;
